--- a/PolicyAmendmentApp2/package.json
+++ b/PolicyAmendmentApp2/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "docx": "^9.0.2",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
