--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh -i ~/.ssh/id_rsa ubuntu@130.225.39.149 "cd /path/to/app && git pull && npm install && pm2 restart all"
+          ssh -i ~/.ssh/id_rsa ubuntu@130.225.39.149 "cd /DSF/PolicyAmendmentApp2 && git pull && npm install && pm2 restart all"
