--- a/PolicyAmendmentApp2/package.json
+++ b/PolicyAmendmentApp2/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "docx": "^9.0.2",
+    "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
