--- a/PolicyAmendmentApp2/package.json
+++ b/PolicyAmendmentApp2/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "pug": "^3.0.3"
   }
 }
