--- a/PolicyAmendmentApp2/package.json
+++ b/PolicyAmendmentApp2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +22,9 @@
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
     "pug": "^3.0.3"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "supertest": "^6.3.0"
   }
 }
