logic about change from amendment to amendment to amendment mode. And having a Peper management module, being able to open and close amendment submission. And handling this in the DB.

--- a/PolicyAmendmentApp2/columnMappings.json
+++ b/PolicyAmendmentApp2/columnMappings.json
@@ -1,5 +1,6 @@
 {
   "amendment_number": ["ÆF nummer", "AM number", "ændringsnummer"],
+  "amendment_to_amendment": ["ÆF til ÆF", "AM to AM", "ændring_til_ændring", "ÆF til ÆF"],
   "write_in": ["Til indskrivning", "For write-in", "til_indskrivning", "Indskrivning"],
   "conflicting_with": ["I modstrid med", "Contradicting with", "modstridende_med", "Modstridende med"],
   "proposer": ["Stiller", "Proposer", "stiller"],
